Fix z-index issue in accordion button

--- a/front/src/components/about/About.css
+++ b/front/src/components/about/About.css
@@ -8,6 +8,9 @@
     box-shadow: 0 0 3px 4px rgba(0, 0, 0, 0.1);
 }
 
+.accordion-button {
+    z-index: 0 !important;
+}
 .accordion-button:focus {
     box-shadow: none !important;
 }
